# ctrader

./: Dockerfile  PROJECT_STRUCTURE_PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: default_config.yaml
data/: BTC-USDT-1m.csv  ETH-BTC-1m.csv  ETH-USDT-1m.csv
database/: trading_data.db
examples/: websocket_client_example.py
src/: __init__.py
src/backtesting/: __init__.py  backtester.py  data_replay.py  market_simulator.py  performance.py
src/cli/: __init__.py  main.py  main.py.bak
src/data/: __init__.py  cache.py  data_handler.py  websocket_client.py
src/database/: __init__.py  models.py  utils.py
src/exchange/: __init__.py  binance_connector.py
src/execution/: __init__.py  execution_handler.py  order_manager.py  signal_aggregator.py
src/ml/: __init__.py  feature_engineering.py  model_manager.py  predictor.py  training_pipeline.py
src/risk/: __init__.py  risk_manager.py
src/strategies/: __init__.py  arbitrage_strategy.py  base_strategy.py  registry.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py
tests/backtesting/: __init__.py  test_backtester.py  test_data_replay.py  test_market_simulator.py  test_performance.py
tests/data/: __init__.py  conftest.py  test_websocket_client.py
tests/execution/: __init__.py  test_execution_handler.py  test_order_manager.py  test_signal_aggregator.py
tests/ml/: __init__.py  test_feature_engineering.py  test_model_manager.py
tests/risk/: __init__.py  test_risk_manager.py
tests/strategies/: __init__.py  test_arbitrage_strategy.py  test_base_strategy.py  test_registry.py
tests/utils/: conftest.py  test_config.py
