[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctrader"
version = "0.1.0"
description = "A personal crypto high-frequency trading (HFT) system focused on arbitrage opportunities on Binance Spot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "redis>=5.0.0",
    "websockets>=11.0.0",
    "aiohttp>=3.8.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "inquirerpy>=0.3.4",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.0",
    "typer-cli>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

[project.scripts]
ctrader = "ctrader.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
# Tell hatch to include the 'src' directory as the package root
packages = ["src"]
